--- a/newspaper/templates/posts.html
+++ b/newspaper/templates/posts.html
@@ -84,6 +84,7 @@
 <!--        </form>-->
     {% else %} <!-- Если товаров нет, то говорим что товаров нет ;) -->
         <h2>Новостей нет!</h2>
+        <a href="{% url 'post_create' %}">Добавить новую запись</a> <br>
     {% endif %}
 
 {% endblock content %}
