--- a/newspaper/templates/flatpages/default.html
+++ b/newspaper/templates/flatpages/default.html
@@ -18,19 +18,19 @@
     <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#!">News Paper app - {{ flatpage.title }}</a>
+                <a class="navbar-brand" href="/">News Paper app - {{ flatpage.title }}</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#!">
+                            <a class="nav-link" href="/">
                                 Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about/">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="services/">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacts/">Contact</a></li>
                     </ul>
                 </div>
             </div>
